Initilized CSS for Button Flexibility

--- a/dempage.html
+++ b/dempage.html
@@ -1,5 +1,5 @@
 <!DOCtype html>
-<html>
+<html lang="en">
 <head>
 <title>Youtube Element Test</title>    
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,8 +23,8 @@
         background-color: none;
         color: white;
         font-family: sans-serif;
-        font-weight: 500;
-        font-size: 9pt;
+        font-weight: 600;
+        font-size: 8.5pt;
         margin-bottom: 0px;
         margin-top: 0px;
     }
@@ -56,20 +56,17 @@
         border-radius: 20px;
         cursor: pointer;   
     }
+    
 
-
-    .tu {
-        background-color: rgb(29, 29, 29);
+    .like-count {
+        background-color: rgba(0, 0, 0, 0);
         border: none;
-        border-right-width: 30px;
+        border-radius: 20px;
+        font-family: sans-serif;
+        font-size:6pt;
+        margin-right: 0;
+        margin-left: 0;
     }
-
-
-    .td {
-        background-color: rgb(29, 29, 29);
-        border: none;
-    }
-
 
 
 </style>
@@ -88,8 +85,12 @@
 </p>
 
 <button class="tu">
-<i class="fa fa-thumbs-up">67k   
+<i class="fa fa-thumbs-up">
 </i>
+</button>
+
+<button class="like-count">
+    67k
 </button>
 
 <button class="td">
