Applied CSS Adjustments

--- a/dempage.html
+++ b/dempage.html
@@ -1,10 +1,11 @@
 <!DOCtype html>
 <html lang="en">
 <head>
-<title>Youtube Element Test</title>    
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<title>Youtube Element Test</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+    <body>
 
 
 <style>
@@ -56,60 +57,45 @@
         border-radius: 20px;
         cursor: pointer;   
     }
-    
 
-    .like-count {
-        background-color: rgba(0, 0, 0, 0);
-        border: none;
-        border-radius: 20px;
-        font-family: sans-serif;
-        font-size:6pt;
-        margin-right: 0;
-        margin-left: 0;
-    }
 
 
 </style>
 
 
-<p class="you-title">
+<div class="you-title">
     4 billion If Statements | Prime Reacts
-</p>
+</div>
 
-<p class="creator-profile">
+
+<div class="creator-profile">
     ThePrimeTime &check;
-</p>
+</div>
 
-<p class="stats-subs">
+
+<div class="stats-subs">
     917k Subscribers
-</p>
+</div>
 
-<button class="tu">
-<i class="fa fa-thumbs-up">
-</i>
-</button>
 
-<button class="like-count">
-    67k
-</button>
-
+<div class="tu">
+    <span class="fa fa-thumbs-up"></span>
+    <span class="like-count">26k</span>
+    <span class="line-split">|</span>
 <button class="td">
-<i class="fa fa-thumbs-down">  
-</i>
+    <span class="fa fa-thumbs-down"></span>
 </button>
-
-<p class=="vid-stats">
-    873,334 views &middot; Jan 22, 2024
-</p>
-
-<p class="descript-head">
-    Recorded live on Twitch, GET IN!
-</p>
-
-<p class="descript-body">
-    The best way to support me is to support yourself becoming a better backend enigneer.
-</p>
+</div>
 
 
-</body>
+<div class=="vid-stats">873,334 views &middot; Jan 22, 2024</div>
+
+
+<p class="descript-head">Recorded live on Twitch, GET IN!</p>
+
+
+<p class="descript-body">The best way to support me is to support yourself becoming a better backend enigneer.</p>
+
+
+    </body>
 </html>
