--- a/dempage.html
+++ b/dempage.html
@@ -15,12 +15,12 @@
         font-family: sans-serif;
         font-weight: bold;
         font-size: 9.65pt;
-        margin-bottom: 8.8px;
+        margin-bottom: 0px;
 
     }    
     
 
-    .creator-profile {
+    .align-subscribe-button {
         background-color: none;
         color: white;
         font-family: sans-serif;
@@ -37,7 +37,10 @@
         font-family: sans-serif;
         font-weight: 100;
         font-size: 5pt;
-        margin-top: 3.8px;
+                                                                                                                                             
+        margin-top: 0px;
+        margin-bottom: 8px;
+
     }
 
 
@@ -62,21 +65,13 @@
 
 </style>
 
+    <p class="you-title">4 billion If Statements | Prime Reacts</p>
 
-<div class="you-title">
-    4 billion If Statements | Prime Reacts
+<div class="align-subscribe-button">
+    <p>ThePrimeTime &check;</p>
 </div>
 
-
-<div class="creator-profile">
-    ThePrimeTime &check;
-</div>
-
-
-<div class="stats-subs">
-    917k Subscribers
-</div>
-
+<p class="stats-subs">917k Subscribers</p>
 
 <div class="tu">
     <span class="fa fa-thumbs-up"></span>
@@ -88,14 +83,13 @@
 </div>
 
 
-<div class=="vid-stats">873,334 views &middot; Jan 22, 2024</div>
+<div>
+    <p class="vid-stats">873,334 views &middot; Jan 22, 2024</p>
 
+    <p class="descript-head">Recorded live on Twitch, GET IN!</p>
 
-<p class="descript-head">Recorded live on Twitch, GET IN!</p>
-
-
-<p class="descript-body">The best way to support me is to support yourself becoming a better backend enigneer.</p>
-
-
+    <p class="descript-body">The best way to support me is to support yourself becoming a better backend enigneer.
+    </p>
+</div>
     </body>
 </html>
